<package>
  <name>yaml_cpp_0_3</name>
  <version>0.3.1</version>
  <description>
     Legacy version of yaml cpp without boost, namespaced to avoid system conflicts.
  </description>
  <url type="repository">https://github.com/stonier/yaml_cpp_0_3</url>
  <url type="bugtracker">https://github.com/stonier/yaml_cpp_0_3/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>MIT</license>
  <author>Google</author>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
